[package]
name = "tangleveil"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
axum = { version = "0.8.9", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tokio = { version = "1.52", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
