[package]
name = "tangleveil"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
base64 = "0.22"
url = "2"
axum = { version = "0.8.9", features = ["ws"] }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
tokio = { version = "1.52", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", default-features = true, features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
tokio-util = { version = "0.7", features = ["rt"] }
metrics = "0.24"
metrics-process = "2.4"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
# jaq powers the experimental `?jaq=` filter. The `sync` feature switches
# jaq-json's value type from Rc to Arc so the compiled filter is `Send` and can
# live in the (multi-threaded) axum websocket task; `serde` enables the
# serde_json <-> Val conversion we use for input/output.
jaq-core = "3.1.0"
jaq-std = "3.0.1"
jaq-json = { version = "2.0.1", features = ["sync", "serde"] }
